Revision history for {{$dist->name}}

{{$NEXT}}

0.48      2018-06-24 00:12:42 -0400
  - Update ffi_dylib for darwin

0.47      2017-07-26 07:41:06 -0400
  - Migrate from File::ShareDir to File::ShareDir::Dist

0.46      2017-03-23 15:47:20 -0400
  - split off from FFI::Platypus 0.45