@@ -11,6 +11,7 @@ travis_status = 1
 release_tests = 1
 github_user   = Perl5-FFI
 installer     = Author::Plicease::MakeMaker
+test2_v0      = 1
 
 [RemovePrereqs]
 remove = strict
@@ -20,6 +21,7 @@ remove = File::Glob
 remove = File::Path
 remove = File::Spec
 remove = Text::ParseWords
+remove = File::Copy
 
 ;[Prereqs]
 ;Foo::Bar = 0
