@@ -1,7 +1,7 @@
-use strict;
-use warnings;
+use Test2::V0 -no_srand => 1;
 use Config;
-use Test::More tests => 1;
+
+eval q{ require Test::More };
 
 # This .t file is generated.
 # make changes instead to dist.ini
@@ -14,9 +14,10 @@ $modules{$_} = $_ for qw(
   ExtUtils::MakeMaker
   File::ShareDir::Dist
   File::ShareDir::Install
+  File::Which
+  File::chdir
   Module::Build
-  Test2::Bundle::Extended
-  Test::More
+  Test2::V0
 );
 
 
@@ -63,7 +64,7 @@ if(@keys > 0)
 
 diag sprintf $format, 'perl ', $];
 
-foreach my $module (@modules)
+foreach my $module (sort @modules)
 {
   if(eval qq{ require $module; 1 })
   {
@@ -85,3 +86,4 @@ if($post_diag)
 
 spacer;
 
+done_testing;
