@@ -1,0 +1,6 @@
+use Test2::V0 -no_srand => 1;
+use Module::Build::FFI::Pascal;
+
+skip_all 'TODO';
+
+done_testing;
